force-app/main/default/objects/Integration_Patient__c/fields/IsDeletedInSDH__c.field-meta.xml
<CustomField>
    <fullName>IsDeletedInSDH__c</fullName>
    <label>IsDeletedInSDH</label>
    <length>1</length>
    <type>Text</type>
</CustomField>