force-app/main/default/objects/Integration_Patient__c/fields/STUDYID__c.field-meta.xml
<CustomField>
    <fullName>STUDYID__c</fullName>
    <label>STUDYID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>