force-app/main/default/objects/Integration_Patient__c/fields/Subject_Status__c.field-meta.xml
<CustomField>
    <fullName>Subject_Status__c</fullName>
    <label>Subject Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>